# skit-labels

./: .gitignore  CHANGELOG.md  Makefile  README.org  pyproject.toml
.github/workflows/: tag_release.yml  test.yml
skit_labels/: cli.py  commands.py  constants.py  db.py  types.py  utils.py
skit_labels/labelstudio/: annotations.py
tests/: test_annotation_parsing.py  test_db.py  test_tog.py  test_version.py
tog/: README.org  cli.py  commands.py  constants.py  db.py  types.py
