[tool.poetry]
name = "skit-labels"
version = "0.3.22"
description = "Command line tool for interacting with labelled datasets at skit.ai."
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^21.4.0"
pydash = "^5.1.0"
docopt = "^0.6.2"
tqdm = "^4.63.0"
psycopg2-binary = "^2.9.3"
pytz = "^2020.5"
python-dateutil = "^2.8.2"
toml = "^0.10.2"
dvc = {extras = ["s3"], version = "^2.9.5"}
aiobotocore = "^2.1.2"
botocore = ">=1.23.24,<1.23.25"
loguru = "^0.5.3"
jsonschema = "^4.4.0"
aiohttp = "^3.8.1"
numpy = "^1.22.3"
pandas = "^1.4.1"
skit-fixdf = "^0.1.12"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
skit-labels = "skit_labels.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
