[tool.poetry]
name = "skit-labels"
version = "0.3.36"
description = "Command line tool for interacting with labelled datasets at skit.ai."
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
aiobotocore = "^2.1.2"
aiofiles = "0.8.0"
aiohttp = "3.8.1"
attrs = "20.3.0"
botocore = ">=1.23.24,<1.23.25"
dvc = {extras = ["s3"], version = "2.9.5"}
jsonschema = "3.2.0"
loguru = "^0.5.3"
pandas = "1.4.2"
pydash = "^5.1.0"
psycopg2-binary = "2.9.3"
pytz = "2021.1"
python-dateutil = "^2.8.2"
numpy = "1.22.0"
toml = "0.10.2"
tqdm = "4.62.1"
tenacity = "^8.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
skit-labels = "skit_labels.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
