[tool.poetry]
name = "skit-labels"
version = "0.3.37"
description = "Command line tool for interacting with labelled datasets at skit.ai."
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
aiobotocore = "2.14.0"
aiofiles = "0.8.0"
aiohttp = "^3.10.4"
attrs = "24.2.0"
botocore = ">=1.35.0,<1.35.8"
dvc = {extras = ["s3"], version = "3.55.1"}
jsonschema = "3.2.0"
loguru = "^0.5.3"
pandas = "^1.4.2"
pydash = "^6.0.0"
psycopg2-binary = "^2.9.3"
pytz = "2021.1"
python-dateutil = "^2.8.2"
numpy = "^1.22.0"
toml = "0.10.2"
tqdm = "4.66.3"
tenacity = "^8.2.2"
asyncssh = "^2.14.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
skit-labels = "skit_labels.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
